--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 .nav-title{
+    font-family: 'Roboto', sans-serif;
     color: white;
     margin-left: 2%;
     width: 50%;
@@ -15,6 +16,7 @@
 }
 
 .nav-links{
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     list-style-type: none;
     margin-left: 13%;
@@ -34,6 +36,7 @@
 }
 
 .btn{
+    font-family: 'Roboto', sans-serif;
     color: white;
     background: mediumturquoise;
     box-shadow: 3px 3px black;
